PRSS static to dynamic. (#14)
Makes configuration trivial.

--- a/demos/.config/party3_0.ini
+++ b/demos/.config/party3_0.ini
@@ -1,9 +1,6 @@
 [Party 0]
-host = localhost
+host = 
 port = 11365
-0 1 2 = 0xe10540bb0defc16653b29ed70e9443d9
-0 1 = 0x3c34c878448ed58d98c7ba03e6751d6b
-0 2 = 0xa8a2e975af647b6ac8b67162c42e4a41
 
 [Party 1]
 host = localhost
