--- a/demos/.config/party3_1.ini
+++ b/demos/.config/party3_1.ini
@@ -3,11 +3,8 @@ host = localhost
 port = 11365
 
 [Party 1]
-host = localhost
+host = 
 port = 11366
-0 1 2 = 0xe10540bb0defc16653b29ed70e9443d9
-0 1 = 0x3c34c878448ed58d98c7ba03e6751d6b
-1 2 = 0xf03a0efb2380e518c4584a5875c35692
 
 [Party 2]
 host = localhost
