--- a/demos/.config/party3_2.ini
+++ b/demos/.config/party3_2.ini
@@ -7,9 +7,6 @@ host = localhost
 port = 11366
 
 [Party 2]
-host = localhost
+host = 
 port = 11367
-0 1 2 = 0xe10540bb0defc16653b29ed70e9443d9
-0 2 = 0xa8a2e975af647b6ac8b67162c42e4a41
-1 2 = 0xf03a0efb2380e518c4584a5875c35692
 
