--- a/demos/.config/party4_2.ini
+++ b/demos/.config/party4_2.ini
@@ -7,12 +7,8 @@ host = localhost
 port = 11366
 
 [Party 2]
-host = localhost
+host = 
 port = 11367
-0 1 2 3 = 0xadf9b58d13ab22a220a8a567151ffa54
-0 1 2 = 0x2c6e881a46192884339062b2b0ce56bd
-0 2 3 = 0x41b778de396af215f05a00cafa5fd26c
-1 2 3 = 0x998d0095a406bba3a5885cf59f56e884
 
 [Party 3]
 host = localhost
