--- a/demos/.config/party4_3.ini
+++ b/demos/.config/party4_3.ini
@@ -11,10 +11,6 @@ host = localhost
 port = 11367
 
 [Party 3]
-host = localhost
+host = 
 port = 11368
-0 1 2 3 = 0xadf9b58d13ab22a220a8a567151ffa54
-0 1 3 = 0x17e17b5c32e16dd5ac7a8ae7f76439c5
-0 2 3 = 0x41b778de396af215f05a00cafa5fd26c
-1 2 3 = 0x998d0095a406bba3a5885cf59f56e884
 
