--- a/demos/.config/party5_1.ini
+++ b/demos/.config/party5_1.ini
@@ -3,19 +3,8 @@ host = localhost
 port = 11365
 
 [Party 1]
-host = localhost
+host = 
 port = 11366
-0 1 2 3 4 = 0x59c56516664b746c25d10eff6f44bd27
-0 1 2 3 = 0x2f9f43910862a9a95fec23cbe1b2fb67
-0 1 2 4 = 0xaf7b045321f60d995175d6ea0c06accc
-0 1 3 4 = 0x534eeb0880d72981ab84bc2627f91234
-1 2 3 4 = 0x345ba2eceebae175c11b2b1a0f229d71
-0 1 2 = 0x8a21b3bc03ef2508f118edccc9949cd3
-0 1 3 = 0xcc25416e238d7e34dec4d990870053aa
-0 1 4 = 0x76fe65e22bebaf535087e8fd5c68b3c9
-1 2 3 = 0x1d060ed012181d95fa3f6ffaab330b40
-1 2 4 = 0xaaade620fee570754a247e5efaff5fd1
-1 3 4 = 0xde4ff04e4e654207bb276e3ed807a66a
 
 [Party 2]
 host = localhost
