--- a/demos/.config/party5_2.ini
+++ b/demos/.config/party5_2.ini
@@ -7,19 +7,8 @@ host = localhost
 port = 11366
 
 [Party 2]
-host = localhost
+host = 
 port = 11367
-0 1 2 3 4 = 0x59c56516664b746c25d10eff6f44bd27
-0 1 2 3 = 0x2f9f43910862a9a95fec23cbe1b2fb67
-0 1 2 4 = 0xaf7b045321f60d995175d6ea0c06accc
-0 2 3 4 = 0x5ad9febee30f5a3dc744d6f6078ce7b6
-1 2 3 4 = 0x345ba2eceebae175c11b2b1a0f229d71
-0 1 2 = 0x8a21b3bc03ef2508f118edccc9949cd3
-0 2 3 = 0x6b6e8e21bb5e9259df48955528ea6602
-0 2 4 = 0x5b75051f185fddaa68595d4887dcf53b
-1 2 3 = 0x1d060ed012181d95fa3f6ffaab330b40
-1 2 4 = 0xaaade620fee570754a247e5efaff5fd1
-2 3 4 = 0x1a844face1be7acb2ae530e62297b588
 
 [Party 3]
 host = localhost
