--- a/demos/.config/party4_0.ini
+++ b/demos/.config/party4_0.ini
@@ -1,10 +1,6 @@
 [Party 0]
-host = localhost
+host = 
 port = 11365
-0 1 2 3 = 0xadf9b58d13ab22a220a8a567151ffa54
-0 1 2 = 0x2c6e881a46192884339062b2b0ce56bd
-0 1 3 = 0x17e17b5c32e16dd5ac7a8ae7f76439c5
-0 2 3 = 0x41b778de396af215f05a00cafa5fd26c
 
 [Party 1]
 host = localhost
