--- a/demos/.config/party4_1.ini
+++ b/demos/.config/party4_1.ini
@@ -3,12 +3,8 @@ host = localhost
 port = 11365
 
 [Party 1]
-host = localhost
+host = 
 port = 11366
-0 1 2 3 = 0xadf9b58d13ab22a220a8a567151ffa54
-0 1 2 = 0x2c6e881a46192884339062b2b0ce56bd
-0 1 3 = 0x17e17b5c32e16dd5ac7a8ae7f76439c5
-1 2 3 = 0x998d0095a406bba3a5885cf59f56e884
 
 [Party 2]
 host = localhost
