Bug fix:  handle (added) empty columns in csv.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ python:
     - 3.7
     - 3.8
     - pypy3
-script:
-    python -m unittest discover tests
+script: python -m unittest discover tests
