--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ python:
     - 3.7
     - 3.8
     - pypy3
-script: python -m unittest discover tests
+install: pip install codecov
+script: coverage run --source mpyc -m unittest discover tests
+after_success: codecov
