--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,8 @@
 version: 2
+formats: all
 sphinx:
    configuration: docs/conf.py
 python:
-  version: 3.8
   install:
     - method: setuptools
       path: .
