Drop Python 3.6 support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 dist: bionic
 language: python
 python:
-    - 3.6
     - 3.7
     - 3.8
     - 3.9
     - 3.10
-    - pypy3
+    - pypy3.7-7.3.5
 install: pip install codecov
 script: coverage run --source mpyc -m unittest discover tests
 after_success: codecov
