--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,12 @@
 version: 2
 formats: all
-sphinx:
-   configuration: docs/conf.py
 python:
   install:
     - method: setuptools
       path: .
     - requirements: docs/requirements.txt
+build:
+  tools:
+    python: "3.8"
+sphinx:
+   configuration: docs/conf.py
