Preparations for NumPy support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
     - 3.9
     - 3.10
     - pypy3.8-7.3.9
-install: pip install codecov
+install: pip install codecov numpy
 script: coverage run --source mpyc -m unittest discover tests
 after_success: codecov
