--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,7 @@ before_install:
   - pip install --upgrade pip
   - pip install coverage
 script: coverage run --source mpyc -m unittest discover tests
-after_success: codecov
+after_success:
+  - curl -Os https://uploader.codecov.io/latest/linux/codecov
+  - chmod +x codecov
+  - ./codecov
