--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ dist: jammy
 language: python
 jobs:
   - python: 3.9
+    env:
+      - MPYC_NOPRSS=1
     install: pip install numpy==1.22.* gmpy2
   - python: pypy3.9-7.3.9
     install: pip install numpy==1.23.*
