Use uvloop (winloop) as default loop, if available.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,18 @@ jobs:
   - python: 3.9
     env:
       - MPYC_NOPRSS=1
-    install: pip install numpy==1.23.* gmpy2
+    install: pip install numpy==1.23.* gmpy2 uvloop
   - python: pypy3.9-7.3.9
     install: pip install numpy==1.24.*
   - python: 3.10
     env:
       - MPYC_NONUMPY=1
       - MPYC_NOGMPY=1
+      - MPYC_NOUVLOOP=1
   - python: 3.11
     install: pip install numpy==1.25.* gmpy2
   - python: 3.12
-    install: pip install numpy
+    install: pip install numpy uvloop
 before_install:
   - pip install --upgrade pip
   - pip install coverage
