Add some np stubs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,5 +41,5 @@ requires-python = '>=3.10'
 documentation = 'https://mpyc.readthedocs.io'
 discussions = 'https://github.com/lschoe/mpyc/discussions'
 'release notes' = 'https://github.com/lschoe/mpyc/releases'
-homepage = 'https://www.win.tue.nl/~berry/mpyc/'
+homepage = 'https://berry.win.tue.nl/mpyc/'
 repository =  'https://github.com/lschoe/mpyc'
