--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -3,8 +3,9 @@ name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: ["master"]
+  # comment next 2 lines to skip automatic deployment
+  #push:
+  #  branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
